manifests/bundle.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gcr-to-registry-webhook
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcr-to-registry-webhook
  template:
    metadata:
      labels:
        app: gcr-to-registry-webhook
    spec:
      containers:
        - name: gcr-to-registry-webhook
          image: ghcr.io/abstractinfrastructure/k8s-gcr-quickfix:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
---
kind: Service
apiVersion: v1
metadata:
  name: gcr-to-registry-webhook
  namespace: kube-system
spec:
  selector:
    app: gcr-to-registry-webhook
  ports:
    - port: 443
      targetPort: 8443
---
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: gcr-to-registry-webhook
  namespace: kube-system
webhooks:
  - name: gcr-to-registry.webhook.dev
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN0akNDQVo0Q0NRRHRBMFIvVHV2U3N6QU5CZ2txaGtpRzl3MEJBUXNGQURBZE1Sc3dHUVlEVlFRRERCSkgKUTFJZ2RHOGdVbVZuYVhOMGNua2dRMEV3SGhjTk1qTXdNekV3TURRMU9USXlXaGNOTWpNd05EQTVNRFExT1RJeQpXakFkTVJzd0dRWURWUVFEREJKSFExSWdkRzhnVW1WbmFYTjBjbmtnUTBFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDK1MxSm1rNVFlWHIvaDBPV0FsU01pLzV4VzcxQ2tiUVpQYWhWVWswVi8KMnY2YVNNNTZVeFp1NXZNbkFDYUNPY2RSOTJNSXJIbTU2bVVXMWtXNThMeEpuRnNzUGEvU1Bpc2NIeHlCQlRuTQpwTFA3bnRYYVVm [...]
      service:
        namespace: kube-system
        name: gcr-to-registry-webhook
        path: /mutate
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["CREATE"]
        scope: Namespaced
    sideEffects: None
    admissionReviewVersions: ["v1"]
